[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Sprites/health-orb.png" type="Texture" id=1]
[ext_resource path="res://src/objects/HealthOrb.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sounds/confirm_style_4_echo_003.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 12.0

[node name="HealthOrb" type="Area2D"]
collision_layer = 0
script = ExtResource( 2 )

[node name="RedTexture" type="Sprite" parent="."]
position = Vector2( -1, -1 )
scale = Vector2( 1.125, 1.125 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
pitch_scale = 1.99
bus = "GunBus"

[connection signal="body_entered" from="." to="." method="_on_HealthOrb_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_AudioStreamPlayer2D_finished"]
